--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #74dbbe;
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #3c7867;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -24,13 +24,13 @@ body {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #3c7867;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #6eb593;
+  color: black;
 }
 
 .topnav .icon {
